--- a/.travis.yml
+++ b/.travis.yml
@@ -94,16 +94,16 @@ jobs:
       env: LINTER=ruby
       script:
         - bundle exec rubocop --display-cop-names
-        - shellcheck spec/**/*.sh
+        - shellcheck spec/support/bin/*.sh # decided to not create another build
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
-      env: LINTER=vim VIML_DIRECTORIES=(autoload nerdtree_plugin plugin syntax)
+      env: LINTER=vim VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
       before_script:
         - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
         - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
       script:
-        - sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser -v "${VIML_DIRECTORIES[@]}"
-        - vint "${VIML_DIRECTORIES[@]}"
+        - "sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser -v $VIML_DIRECTORIES"
+        - "vint $VIML_DIRECTORIES"
       language: python
       # From logs: The `pip3' command exists in these Python versions:
       # 3.6.7, 3.7, 3.7.1
