--- a/.travis.yml
+++ b/.travis.yml
@@ -97,12 +97,22 @@ jobs:
         - shellcheck spec/support/bin/*.sh # decided to not create another build
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
-      env: LINTER=vim VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
+      env: >
+        LINTER=vim
+        VIMLINT_IGNORE_JOB_CONTROL_WARNINGS='-e EVL103.a:channel=1 -e EVL103.a:event=1 -e EVL103.a:job=1 -e EVL103.a:pty=1 -e EVL103.a:timer=1'
+        TODO_VIMLINT_IGNORE_SCIPT_ENCODINGS='-e EVL205=1'
+        VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME='-e EVL102.l:_=1'
+        VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
       before_script:
         - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
         - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
       script:
-        - "sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser -v $VIML_DIRECTORIES"
+        -
+          sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser
+            $VIMLINT_IGNORE_JOB_CONTROL_WARNINGS
+            $TODO_VIMLINT_IGNORE_SCIPT_ENCODINGS
+            $VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME
+            $VIML_DIRECTORIES
         - "vint $VIML_DIRECTORIES"
       language: python
       # From logs: The `pip3' command exists in these Python versions:
