--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 Layout/LineLength:
-  Max: 100
+  Max: 120
 
 Layout/EmptyLinesAroundBlockBody:
   Exclude:
@@ -30,3 +30,9 @@ Style/BlockDelimiters:
   Exclude:
     - 'spec/**/*_spec.rb'
   # EnforcedStyle: braces_for_chaining
+
+Style/DoubleNegation:
+  Enabled: false # TODO
+
+Metrics/MethodLength:
+  Max: 20
