--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,8 @@ Layout/ArgumentAlignment:
 Style/BlockDelimiters:
   Exclude:
     - 'spec/**/*_spec.rb'
+    - 'spec/spec_helper.rb'
+    - 'spec/**/shared_examples/*.rb'
   # EnforcedStyle: braces_for_chaining
 
 Style/DoubleNegation:
