--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,6 @@ before_install:
   # https://docs.travis-ci.com/user/languages/ruby/#bundler-20
   - yes | gem update --system --force
   - gem install bundler
-  # - |
-  #   sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
-  #   [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy # for macvim
 install:
   - |
     [ "$LINTER" = vim ] && pip3 install vim-vint==0.3.21 && return
@@ -97,24 +94,22 @@ jobs:
         - shellcheck spec/support/bin/*.sh # decided to not create another build
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
+      # VIMLINT_IGNORE_JOB_CONTROL_WARNINGS are ignored. TODO figure out why
       env:
         LINTER=vim
         VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
-        # VIMLINT_IGNORE_JOB_CONTROL_WARNINGS='-e EVL103.a:channel=1 -e EVL103.a:event=1 -e EVL103.a:job=1 -e EVL103.a:pty=1 -e EVL103.a:timer=1'
-        # TODO_VIMLINT_WARNING_SCIPT_ENCODINGS='-e EVL205=3'
-        # VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME='-e EVL102.l:_=1'
-      # before_script:
-        # - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
-        # - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
+        VIMLINT_IGNORE_JOB_CONTROL_WARNINGS='-e EVL103.a:channel=1 -e EVL103.a:event=1 -e EVL103.a:job=1 -e EVL103.a:pty=1 -e EVL103.a:timer=1'
+        TODO_VIMLINT_WARNING_SCIPT_ENCODINGS='-e EVL205=3'
+        VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME='-e EVL102.l:_=1'
+      before_script:
+        - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
+        - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
       script:
-        ## TODO enable vimlint back after figuring out why $VIMLINT_IGNORE_JOB_CONTROL_WARNINGS
-        ## is ignored
-        # -
-        #   sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser
-        #     $VIMLINT_IGNORE_JOB_CONTROL_WARNINGS
-        #     $TODO_VIMLINT_WARNING_SCIPT_ENCODINGS
-        #     $VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME
-        #     $VIML_DIRECTORIES
+          sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser
+            $VIMLINT_IGNORE_JOB_CONTROL_WARNINGS
+            $TODO_VIMLINT_WARNING_SCIPT_ENCODINGS
+            $VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME
+            $VIML_DIRECTORIES || echo "Treat errors as warnings as there's no way to configure vimlint flexibly enough"
         - "vint $VIML_DIRECTORIES"
       language: python
       # From logs: The `pip3' command exists in these Python versions:
