--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ dist: xenial
 # https://docs.travis-ci.com/user/reference/osx/#macos-version
 osx_image: xcode9
 
-# NOTE: Services are not supported on osx
+
 services:
-  - xvfb
+  - xvfb # NOTE: Services are not supported on osx
 env: DISPLAY=":99.0" HOMEBREW_NO_AUTO_UPDATE=1
 
 # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
@@ -63,30 +63,34 @@ after_failure:
 
 jobs:
   include:
-    - name: 'Acceptances tests of #backend#system'
+    # OSX acceptance
+    - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
       os: osx
-    - name: 'Acceptances tests of #backend#vim8'
+    - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: osx
-    - name: 'Acceptances tests of #backend#vimproc'
+    - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc --seed 53149
       os: osx
 
-    - name: 'Acceptances tests of #backend#system'
+    # Linux acceptance
+    - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
       os: linux
-    - name: 'Acceptances tests of #backend#vim8'
+    - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: linux
-    - name: 'Acceptances tests of #backend#vimproc'
+    - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc
       os: linux
 
+      # Unit tests
     - name: 'Unit tests'
       script: bundle exec rspec --tag ~backend
       os: linux
 
+      # Linters
     - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
       env: LINTER=ruby
       script:
@@ -94,22 +98,29 @@ jobs:
         - shellcheck spec/support/bin/*.sh # decided to not create another build
       os: linux
     - name: 'Viml lint (Vint, VimLint)'
-      # VIMLINT_IGNORE_JOB_CONTROL_WARNINGS are ignored. TODO figure out why
+      # VIMLINT_IGNORE_JOB_CONTROL_WARNINGS are ignored.  TODO figure out why,
+      # until that VIMLINT_WARNING_UNUSED_ARGUMENTS_AND_VARIABLES_WORKAROUND
+      # will be used. Seems, similar problem happens with
+      # VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME
       env:
         LINTER=vim
         VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
         VIMLINT_IGNORE_JOB_CONTROL_WARNINGS='-e EVL103.a:channel=1 -e EVL103.a:event=1 -e EVL103.a:job=1 -e EVL103.a:pty=1 -e EVL103.a:timer=1'
+        VIMLINT_WARNING_UNUSED_ARGUMENTS_AND_VARIABLES_WORKAROUND='-e EVL103=3'
+        TODO_VIMLINT_WARNING_UNUSED_LOCAL_VARIABLES='-e EVL102=3'
         TODO_VIMLINT_WARNING_SCIPT_ENCODINGS='-e EVL205=3'
         VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME='-e EVL102.l:_=1'
+        VIMLINT_FAIL_EXIT_STATUS_IF_ERRORS='| tee /dev/tty | grep --color ":Error:"'
       before_script:
         - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
         - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
       script:
-          sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser
-            $VIMLINT_IGNORE_JOB_CONTROL_WARNINGS
+        - sh /tmp/vim-vimlint/bin/vimlint.sh -l /tmp/vim-vimlint -p /tmp/vim-vimlparser
+            $VIMLINT_WARNING_UNUSED_ARGUMENTS_AND_VARIABLES_WORKAROUND
+            $TODO_VIMLINT_WARNING_UNUSED_LOCAL_VARIABLES
             $TODO_VIMLINT_WARNING_SCIPT_ENCODINGS
-            $VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME
-            $VIML_DIRECTORIES || echo "Treat errors as warnings as there's no way to configure vimlint flexibly enough"
+            $VIML_DIRECTORIES
+            $VIMLINT_FAIL_EXIT_STATUS_IF_ERRORS
         - "vint $VIML_DIRECTORIES"
       language: python
       # From logs: The `pip3' command exists in these Python versions:
