--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,10 @@ after_failure:
 
 jobs:
   include:
+    # Why tests for two platforms:
+    #   - tests rely on platform specific calls and should be crossplatform
+    #   - underlying backends (mostly vimproc) rely platform specific calls
+
     # OSX acceptance
     - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
@@ -110,7 +114,7 @@ jobs:
         TODO_VIMLINT_WARNING_UNUSED_LOCAL_VARIABLES='-e EVL102=3'
         TODO_VIMLINT_WARNING_SCIPT_ENCODINGS='-e EVL205=3'
         VIMLINT_IGNORE_UNDERSCORED_VARIABLE_NAME='-e EVL102.l:_=1'
-        VIMLINT_FAIL_EXIT_STATUS_IF_ERRORS='| tee /dev/tty | grep --color ":Error:"'
+        FAIL_EXIT_STATUS_IF_VIMLINT_HAS_ERRORS='| tee /dev/tty | grep -v --color ":Error:"'
       before_script:
         - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
         - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
@@ -120,7 +124,7 @@ jobs:
             $TODO_VIMLINT_WARNING_UNUSED_LOCAL_VARIABLES
             $TODO_VIMLINT_WARNING_SCIPT_ENCODINGS
             $VIML_DIRECTORIES
-            $VIMLINT_FAIL_EXIT_STATUS_IF_ERRORS
+            $FAIL_EXIT_STATUS_IF_VIMLINT_HAS_ERRORS
         - "vint $VIML_DIRECTORIES"
       language: python
       # From logs: The `pip3' command exists in these Python versions:
