--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,38 @@
 sudo: required
 
-# https://docs.travis-ci.com/user/reference/linux/#overview
-dist: xenial
-# https://docs.travis-ci.com/user/reference/osx/#macos-version
-osx_image: xcode9
+dist: xenial      # https://docs.travis-ci.com/user/reference/linux/#overview
+osx_image: xcode9 # https://docs.travis-ci.com/user/reference/osx/#macos-version
 
-# NOTE: Services are not supported on osx
 services:
-  - xvfb
+  - xvfb # NOTE: Services are not supported on osx
 env: DISPLAY=":99.0" HOMEBREW_NO_AUTO_UPDATE=1
 
-# https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
-# https://docs.travis-ci.com/user/reference/xenial/#ruby-support
-rvm: 2.2.5
-language: ruby
+rvm: 2.3.8     # https://docs.travis-ci.com/user/reference/osx/#ruby-versionsimplementations
+language: ruby # https://docs.travis-ci.com/user/reference/xenial/#ruby-support
 
+before_cache:
+  - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
 cache:
   bundler: true
   apt: true
+  pip: true
   directories:
     - $TRAVIS_BUILD_DIR/spec/support/vim_plugins
     - $HOME/.rvm
-      # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
-    - $HOME/Library/Caches/Homebrew
+    - $HOME/Library/Caches/Homebrew # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
     - /usr/local/Homebrew
 
-  before_install:
-    - |
-      sudo rm -rf /usr/local/Homebrew/Library/Taps/homebrew/homebrew-cask
-      [ "$TRAVIS_OS_NAME" = "osx" ] && rvm install 2.6.5 --binary --fuzzy # for macvim
-  before_cache:
-    - which brew && brew cleanup # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
-
+before_install:
+  # https://docs.travis-ci.com/user/languages/ruby/#bundler-20
+  - yes | gem update --system --force
+  - gem install bundler
 install:
   - |
-    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
-    bundle install
+    [ "$LINT_FOR" = viml ] && pip3 install vim-vint==0.3.21 && return
+    [ "$LINT_FOR" = ruby ] && bundle install && return
 
+    bundle install
+    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
       sh spec/support/bin/install_osx.sh
       mvim --version
@@ -61,26 +57,54 @@ after_failure:
 
 jobs:
   include:
-    - name: 'Acceptances tests of #backend#system'
+    # Why tests for two platforms:
+    #   - tests rely on platform specific calls and should be crossplatform
+    #   - underlying backends (mostly vimproc) rely platform specific calls
+
+    # OSX acceptance
+    - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
       os: osx
-    - name: 'Acceptances tests of #backend#vim8'
+    - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: osx
-    - name: 'Acceptances tests of #backend#vimproc'
+    - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc --seed 53149
       os: osx
 
-    - name: 'Acceptances tests of #backend#system'
+    # Linux acceptance
+    - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
       os: linux
-    - name: 'Acceptances tests of #backend#vim8'
+    - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
       os: linux
-    - name: 'Acceptances tests of #backend#vimproc'
+    - name: 'Acceptance tests of #backend#vimproc'
       script: bundle exec rspec --tag vimproc
       os: linux
 
+      # Unit tests
     - name: 'Unit tests'
       script: bundle exec rspec --tag ~backend
+      os: linux
+
+      # Linters
+    - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
+      env: LINT_FOR=ruby
+      script:
+        - bundle exec rubocop --display-cop-names
+        - shellcheck spec/support/bin/*.sh # decided to not create another build
+      os: linux
+    - name: 'Viml lint (Vint, VimLint)'
+      env:
+        LINT_FOR=viml
+        VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
+      before_script:
+        - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
+        - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
+      script:
+        - sh "spec/support/bin/vimlint.sh" /tmp/vim-vimlint /tmp/vim-vimlparser $VIML_DIRECTORIES
+        - "vint $VIML_DIRECTORIES"
+      language: python
+      python: 3.7 # From logs: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
       os: linux
