--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ cache:
   pip: true
   directories:
     - $TRAVIS_BUILD_DIR/spec/support/vim_plugins
+    - $TRAVIS_BUILD_DIR/spec/support/bin
     - $HOME/.rvm
     - $HOME/Library/Caches/Homebrew # https://stackoverflow.com/questions/39930171/cache-brew-builds-with-travis-ci
     - /usr/local/Homebrew
@@ -32,7 +33,10 @@ install:
     [ "$LINT_FOR" = ruby ] && bundle install && return
 
     bundle install
-    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins"
+
+    sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins" "$TRAVIS_BUILD_DIR/spec/support/bin"
+    pip install neovim-remote
+
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
       sh spec/support/bin/install_osx.sh
       mvim --version
@@ -40,12 +44,12 @@ install:
       sh spec/support/bin/install_linux.sh
       vim --version
     fi
-    ack --version
+    # ack --version
     ag --version
-    git --version
-    grep --version
-    pt --version
-    rg --version
+    # git --version
+    # grep --version
+    # pt --version
+    # rg --version
 
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
@@ -61,50 +65,53 @@ jobs:
     #   - tests rely on platform specific calls and should be crossplatform
     #   - underlying backends (mostly vimproc) rely platform specific calls
 
-    # OSX acceptance
-    - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: osx
-    - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: osx
-    - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc --seed 53149
-      os: osx
+    - name: 'Acceptance tests of #backend#nvim'
+      script: bundle exec rspec --tag nvim
+      os: linux
+    # # OSX acceptance
+    # - name: 'Acceptance tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: osx
+    # - name: 'Acceptance tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: osx
+    # - name: 'Acceptance tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc --seed 53149
+    #   os: osx
 
-    # Linux acceptance
-    - name: 'Acceptance tests of #backend#system'
-      script: bundle exec rspec --tag system
-      os: linux
-    - name: 'Acceptance tests of #backend#vim8'
-      script: bundle exec rspec --tag vim8
-      os: linux
-    - name: 'Acceptance tests of #backend#vimproc'
-      script: bundle exec rspec --tag vimproc
-      os: linux
+    # # Linux acceptance
+    # - name: 'Acceptance tests of #backend#system'
+    #   script: bundle exec rspec --tag system
+    #   os: linux
+    # - name: 'Acceptance tests of #backend#vim8'
+    #   script: bundle exec rspec --tag vim8
+    #   os: linux
+    # - name: 'Acceptance tests of #backend#vimproc'
+    #   script: bundle exec rspec --tag vimproc
+    #   os: linux
 
-      # Unit tests
-    - name: 'Unit tests'
-      script: bundle exec rspec --tag ~backend
-      os: linux
+    #   # Unit tests
+    # - name: 'Unit tests'
+    #   script: bundle exec rspec --tag ~backend
+    #   os: linux
 
-      # Linters
-    - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
-      env: LINT_FOR=ruby
-      script:
-        - bundle exec rubocop --display-cop-names
-        - shellcheck spec/support/bin/*.sh # decided to not create another build
-      os: linux
-    - name: 'Viml lint (Vint, VimLint)'
-      env:
-        LINT_FOR=viml
-        VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
-      before_script:
-        - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
-        - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
-      script:
-        - sh "spec/support/bin/vimlint.sh" /tmp/vim-vimlint /tmp/vim-vimlparser $VIML_DIRECTORIES
-        - "vint $VIML_DIRECTORIES"
-      language: python
-      python: 3.7 # From logs: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
-      os: linux
+    #   # Linters
+    # - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
+    #   env: LINT_FOR=ruby
+    #   script:
+    #     - bundle exec rubocop --display-cop-names
+    #     - shellcheck spec/support/bin/*.sh # decided to not create another build
+    #   os: linux
+    # - name: 'Viml lint (Vint, VimLint)'
+    #   env:
+    #     LINT_FOR=viml
+    #     VIML_DIRECTORIES='autoload nerdtree_plugin plugin syntax'
+    #   before_script:
+    #     - git clone https://github.com/syngan/vim-vimlint /tmp/vim-vimlint
+    #     - git clone https://github.com/ynkdir/vim-vimlparser /tmp/vim-vimlparser
+    #   script:
+    #     - sh "spec/support/bin/vimlint.sh" /tmp/vim-vimlint /tmp/vim-vimlparser $VIML_DIRECTORIES
+    #     - "vint $VIML_DIRECTORIES"
+    #   language: python
+    #   python: 3.7 # From logs: The `pip3' command exists in these Python versions: 3.6.7, 3.7, 3.7.1
+    #   os: linux
