--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,10 @@ install:
     bundle install
 
     sh spec/support/bin/install_vim_dependencies.sh "$TRAVIS_BUILD_DIR/spec/support/vim_plugins" "$TRAVIS_BUILD_DIR/spec/support/bin"
-    pyenv install --list
-    pyenv update
-    pyenv install python3.7
-    pyenv global  python3.7
+    # pyenv install --list
+    # pyenv update
+    pyenv install 3.6.3
+    pyenv global  3.6.3
     pip3 install neovim-remote
 
     if [ "$TRAVIS_OS_NAME" = "osx" ]; then
