--- a/.travis.yml
+++ b/.travis.yml
@@ -54,12 +54,12 @@ install:
       sh spec/support/bin/install_linux.sh
       vim --version
     fi
-    # ack --version
+    ack --version
     ag --version
-    # git --version
-    # grep --version
-    # pt --version
-    # rg --version
+    git --version
+    grep --version
+    pt --version
+    rg --version
 
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
@@ -75,10 +75,6 @@ jobs:
     #   - tests rely on platform specific calls and should be crossplatform
     #   - underlying backends (mostly vimproc) rely platform specific calls
 
-    - name: 'Acceptance tests of #backend#nvim'
-      script: bundle exec rspec --tag nvim
-      env: INSTALL_PYTHON_VERSION=3.6.1
-      os: linux
     # # OSX acceptance
     # - name: 'Acceptance tests of #backend#system'
     #   script: bundle exec rspec --tag system
@@ -100,6 +96,10 @@ jobs:
     # - name: 'Acceptance tests of #backend#vimproc'
     #   script: bundle exec rspec --tag vimproc
     #   os: linux
+    - name: 'Acceptance tests of #backend#nvim'
+      script: bundle exec rspec --tag nvim
+      env: INSTALL_PYTHON_VERSION=3.6.1
+      os: linux
 
     #   # Unit tests
     # - name: 'Unit tests'
