enable osx build for neovim

--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,10 @@ jobs:
     # - name: 'Acceptance tests of #backend#vimproc'
     #   script: bundle exec rspec --tag vimproc
     #   os: osx
+    - name: 'Acceptance tests of #backend#nvim'
+      script: bundle exec rspec --tag nvim --seed 6880
+      env: INSTALL_PYTHON_VERSION=3.6.1
+      os: osx
 
     # # Linux acceptance
     # - name: 'Acceptance tests of #backend#system'
