--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
     if [ ! -z "$INSTALL_PYTHON_VERSION" ]; then
       pyenv install --skip-existing "$INSTALL_PYTHON_VERSION"
       pyenv global "$INSTALL_PYTHON_VERSION"
+      pyenv rehash
       python --version
       pip --version
       pip3 --version
