fix missing environment variable set

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,7 @@ jobs:
       os: osx
     - name: 'Acceptance tests of #backend#nvim'
       script: bundle exec rspec --tag nvim --seed 6880
-      env: INSTALL_PYTHON_VERSION=3.6.1
+      env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
       os: osx
     - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
@@ -100,7 +100,7 @@ jobs:
       os: linux
     - name: 'Acceptance tests of #backend#nvim'
       script: bundle exec rspec --tag nvim --seed 6885
-      env: INSTALL_PYTHON_VERSION=3.6.1
+      env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
       os: linux
     - name: 'Acceptance tests of #backend#vim8'
       script: bundle exec rspec --tag vim8
