setup autoload and run rubocop --auto-correct to fix files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,3 +43,10 @@ AllCops:
   Exclude:
     - 'spec/support/brew_formula/**/*'
     - 'spec/support/bin/**/*'
+
+
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+  Exclude:
+    - 'spec/support/vimrunner_neovim/**/*'
+    - 'spec/support/dsl/**/*'
