--- a/.travis.yml
+++ b/.travis.yml
@@ -80,39 +80,39 @@ jobs:
     #   - underlying backends (mostly vimproc) rely platform specific calls
 
     # OSX acceptance
-    # - name: 'Acceptance tests of #backend#system'
-    #   script: bundle exec rspec --tag system
-    #   os: osx
-    # - name: 'Acceptance tests of #backend#nvim'
-    #   script: bundle exec rspec --tag nvim --seed 6880
-    #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
-    #   os: osx
-    # - name: 'Acceptance tests of #backend#vim8'
-    #   script: bundle exec rspec --tag vim8
-    #   os: osx
-    # - name: 'Acceptance tests of #backend#vimproc'
-    #   script: bundle exec rspec --tag vimproc
-    #   os: osx
+    - name: 'Acceptance tests of #backend#system'
+      script: bundle exec rspec --tag system
+      os: osx
+    - name: 'Acceptance tests of #backend#nvim'
+      script: bundle exec rspec --tag nvim --seed 6880
+      env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
+      os: osx
+    - name: 'Acceptance tests of #backend#vim8'
+      script: bundle exec rspec --tag vim8
+      os: osx
+    - name: 'Acceptance tests of #backend#vimproc'
+      script: bundle exec rspec --tag vimproc
+      os: osx
 
     # Linux acceptance
     - name: 'Acceptance tests of #backend#system'
       script: bundle exec rspec --tag system
       os: linux
-    # - name: 'Acceptance tests of #backend#nvim'
-    #   script: bundle exec rspec --tag nvim --seed 6885
-    #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
-    #   os: linux
-    # - name: 'Acceptance tests of #backend#vim8'
-    #   script: bundle exec rspec --tag vim8
-    #   os: linux
-    # - name: 'Acceptance tests of #backend#vimproc'
-    #   script: bundle exec rspec --tag vimproc
-    #   os: linux
+    - name: 'Acceptance tests of #backend#nvim'
+      script: bundle exec rspec --tag nvim --seed 6885
+      env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
+      os: linux
+    - name: 'Acceptance tests of #backend#vim8'
+      script: bundle exec rspec --tag vim8
+      os: linux
+    - name: 'Acceptance tests of #backend#vimproc'
+      script: bundle exec rspec --tag vimproc
+      os: linux
 
-      # # Unit tests
-    # - name: 'Unit tests'
-      # script: bundle exec rspec --tag ~backend
-      # os: linux
+      # Unit tests
+    - name: 'Unit tests'
+      script: bundle exec rspec --tag ~backend
+      os: linux
 
       # Linters
     - name: 'Ruby and support shell files lint (Rubocop, shellcheck)'
