--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ install:
     #   sh spec/support/bin/install_linux_dependencies.sh
     # fi
 
-    docker build -t esearch .
+    docker build --build-arg git_branch=$TRAVIS_BRANCH  -t esearch .
 
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then (( sudo Xvfb :99 -ac -screen 0 1024x768x8; echo ok) &); sleep 5; fi
